# try-multi-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
agents/: backend_engineer.py  base.py  code_reviewer.py  db_architect.py  document_writer.py  frontend_engineer.py  infra_engineer.py  it_systems_agent.py  legal_agent.py  operator_agent.py  orchestrator_agent.py  product_manager.py  registry.py  security_reviewer.py  system_architect.py  tax_agent.py  test_engineer.py  validation_engineer.py
orchestrator/: iteration.py  iterative.py  phase.py  pipeline.py  task.py
scripts/: test_caching.py
tools/: __init__.py  browser.py  feedback.py  file_io.py  messaging.py  registry.py  server_manager.py  shell.py  task_management.py
workspace/: shared.py
